tycho-extras/tycho-pomless/src/test/resources/modelreader/products/illFormed/myproduct.product
<product uid="pomless.product" version="1.0.0.qualifier" useFeatures="false" includeLaunchers="true">

   <plugins>
   </plugins>


</product_NOT_WELL_FORMED>
